--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -108,6 +108,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
+    implementation("com.google.android.material:material:1.5.0")
     implementation("com.facebook.react:flipper-integration")
 
     if (hermesEnabled.toBoolean()) {
